--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,12 +18,12 @@ body {
 }
 
 .App {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  padding: 1rem 0.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    padding: 1rem 0.5rem;
 }
 
 .Registration {
@@ -34,9 +34,12 @@ body {
     flex-direction: column;
     justify-content: flex-start;
     padding: 1rem;
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(0, 0, 0, 0.4);
     margin: auto;
-    /*margin-top: 5rem;*/
+    margin-top: 5rem;
+    border: 0.25rem solid black;
+    border-radius: 5px;
+
 }
 
 .RegistrationForm {
@@ -55,19 +58,23 @@ input[type="text"],
 input[type="password"],
 button,
 textarea {
-  font-family: 'Nunito', sans-serif;
-  font-size: 22px;
-  padding: 0.25rem;
-  border-radius: 0.5rem;
+    font-family: 'Nunito', sans-serif;
+    font-size: 22px;
+    padding: 0.25rem;
+    border-radius: 0.5rem;
 }
 
 label,
 button {
-  margin-top: 1rem;
+    margin-top: 1rem;
 }
 
 button {
-  padding: 0.5rem;
+    padding: 0.5rem;
+}
+
+.signin-button {
+    background-color: white;
 }
 
 .instructions {
@@ -142,4 +149,8 @@ nav button {
 nav button:hover {
     background-color: #0056b3;
     text-decoration: none;
+}
+
+.center-text {
+    text-align: center;
 }
