styling and delte item, marked purchased

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,7 +14,7 @@ html {
 
 body {
     min-height: 100vh;
-    background-color: dodgerblue;
+    background-color: dimgray;
 }
 
 .App {
@@ -126,7 +126,7 @@ button {
 nav {
     display: flex;
     justify-content: space-around;
-    background-color: yellowgreen;
+    background-color: peru;
     border-bottom: 2px solid black;
 }
 
@@ -134,10 +134,10 @@ nav {
 nav button {
     text-decoration: none;
     color: #fff;
-    background-color: #007bff;
+    background-color: rgba(244, 164, 96);
     padding: 0.5rem 1rem;
-    border-radius: 0.25rem;
-    margin: 0 0.5rem;
+    border-radius: 0;
+    margin: 0;
     font-size: 1rem;
     display: inline-block;
     text-align: center;
@@ -146,8 +146,15 @@ nav button {
 }
 
 nav button:hover {
-    background-color: #0056b3;
+    background-color: rgba(0, 0, 0, 0.2);
     text-decoration: none;
+}
+
+
+.hello:hover {
+    background-color: rgba(244, 164, 96);
+    text-decoration: none;
+    cursor: auto;
 }
 
 .center-text {
@@ -158,16 +165,36 @@ nav button:hover {
 
 .Lists {
     width: 100%;
-    max-width: 600px;
-    min-height: 500px;
+    min-width: 500px; /* Minimum width */
+    max-width: 800px; /* Maximum width (optional) */
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     padding: 1rem;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(253, 235, 208);
     margin: auto;
-    border: 0.25rem solid black;
+    border: 0.1rem solid black;
     border-radius: 5px;
+    color: black;
+    overflow: auto; /* Add overflow auto to handle content overflow */
+}
+
+.Lists table {
+    /*flex: 1; */
+    width: 100%; /* Ensure table fills the container */
+}
+
+th {
+    background-color: rgba(244, 164, 96);
+}
+
+tr {
+    background-color: rgba(253, 235, 195);
+}
+
+tr:nth-child(odd) {
+    background-color: rgba(0, 0, 0, 0.05);
 }
 
 table td {
@@ -176,6 +203,11 @@ table td {
 
 .Thrash {
     color: red;
+}
+
+.Thrash:hover {
+    color: tomato;
+    cursor: pointer;
 }
 
 .bottom {
@@ -233,7 +265,7 @@ table td {
     width: 100%;
 }
 
-.form-container input[type="text"]{
+.form-container input[type="text"] {
     flex: 1; /* Allow inputs to grow and fill available space */
     height: 50px; /* Set a consistent height */
     padding: 5px; /* Adjust padding as needed */
@@ -263,3 +295,55 @@ input[type="number"]::-webkit-inner-spin-button {
     -webkit-appearance: none; /* Chrome, Safari, Edge, Opera: Hide default spinner */
     margin: 0;
 }
+
+/*for screen readers */
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
+}
+
+.top-margin50 {
+    margin-top: 50px;
+}
+
+.list-button {
+    background-color: rgba(244, 164, 96);
+    border: solid 2px black;
+}
+
+.list-button:hover {
+    background-color: rgba(244, 164, 96, 0.4);
+}
+
+tr.purchased {
+    background-color: grey;
+}
+
+.purchased td {
+    text-decoration: line-through;
+}
+
+.width120 {
+    width: 120px;
+}
+
+.lists-link-button {
+    background-color: rgba(244, 164, 96);
+    width: 100%;
+    text-align: center;
+    padding: 10px;
+    border-radius: 5px;
+    border: none;
+}
+
+.lists-link-button:hover {
+    background-color: rgba(244, 164, 96, 0.4);
+}
+
+
